Solved dependencies with the new version of the mancoosi metamodel project

--- a/it.univaq.mancoosi.failuresdetector.fdserver/.classpath
+++ b/it.univaq.mancoosi.failuresdetector.fdserver/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/it.univaq.mancoosi.injectors"/>
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/AppFramework-1.03.jar"/>
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/javax.transaction_1.1.1.v201006150915.jar"/>
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/mysql-connector-java-3.1.14-bin.jar"/>
@@ -24,5 +23,6 @@
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/org.eclipse.ocl.ecore_1.3.0.v200905271400.jar"/>
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/org.eclipse.osgi_3.5.2.R35x_v20100126.jar"/>
 	<classpathentry kind="lib" path="/it.univaq.mancoosi.failuresdetector.libs/org.eclipse.persistence.jpa.equinox.weaving_2.1.1.v20100817-r8050.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/it.univaq.mancoosi.mancoosimm"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
