--- a/trunk/it.univaq.mancoosi.injectors.packages/config/settings.properties
+++ b/trunk/it.univaq.mancoosi.injectors.packages/config/settings.properties
@@ -10,3 +10,6 @@ transformationLocation=files/src/extractScript.g2m
 metamodelLocation=files/metamodels/packagemm.ecore
 metamodelMainPackage=packagemm
 
+# true/false
+skipFilesWithError=true
+
