--- a/trunk/it.univaq.mancoosi.simulator/config/settings.properties
+++ b/trunk/it.univaq.mancoosi.simulator/config/settings.properties
@@ -12,8 +12,11 @@ directory_output_models = outputModel/
 directory_log = log/
 directory_tmp = temp/
 
-
+// path + filename
 file_package_sequence = packageSequence.xml
 file_input_system_model = systemModel.mancoosimm
+
+// filename only
 file_error_model = errorSimulation.errormm
+
 file_extension_package_model = packagemm
