Simulator supporting all the upgrade scenarios described in http://wiki.debian.org/MaintainerScripts

--- a/bundles/mancoosi-simulator/config/settings.properties
+++ b/bundles/mancoosi-simulator/config/settings.properties
@@ -1,22 +1,22 @@
-# yes/no
-enable_logging = yes
-	save_file_log = no
-	console_log_active = yes
+save_file_logger = no
+console_logger = yes
+
 save_orchestration_model = no
 save_temp_files = no
 
-directory_input_package_models = inModels/
+directory_input_package_models = packageModels/
 directory_model_types = modelTypes/
 directory_transformation_repository = transformationRepository/
 directory_orchestration_models = orchestrationModels/
 directory_output_models = outputModel/
 directory_log = log/
-
-
 directory_tmp = temp/
 
-file_package_sequence = config/packageSequence.xml
-file_input_system_model = inModels/systemModel.mancoosimm
+// path + filename
+file_package_sequence = packageSequence.xml
+file_input_system_model = systemModel.mancoosimm
+
+// filename only
 file_error_model = errorSimulation.errormm
 
 file_extension_package_model = packagemm
