--- a/trunk/it.univaq.mancoosi.injectors.packages/config/settings-debian.properties
+++ b/trunk/it.univaq.mancoosi.injectors.packages/config/settings-debian.properties
@@ -2,6 +2,10 @@
 grammarName=DebianGrammar
 grammarMainRule=mainRule
 
+# Gra2MoL transformation
+transformationLocation=files/src/DebianExtractScript.g2m
+	
+
 # maintainer-script directory (installed packages) 
 maintainerScriptsLocation=/var/lib/dpkg/info/
 
