Integration between the simulator and the injector. Other minor improvements.

--- a/it.univaq.mancoosi.simulator/config/settings.properties
+++ b/it.univaq.mancoosi.simulator/config/settings.properties
@@ -11,12 +11,18 @@ directory_orchestration_models = orchestrationModels/
 directory_output_models = outputModel/
 directory_log = log/
 directory_tmp = temp/
+directory_backup = backup/
 
-// path + filename
+# path + filename
 file_package_sequence = packageSequence.xml
 file_input_system_model = systemModel.mancoosimm
 
-// filename only
+# filename only
 file_error_model = errorSimulation.errormm
 
 file_extension_package_model = packagemm
+
+injector_package_name = pkginj.jar
+injector_package_directory = /home/max/workspace_svn/bundles/mancoosi-injector/pkginject/
+
+delete_files_older_thanNdays = 30
