--- a/it.univaq.mancoosi.simulator/.classpath
+++ b/it.univaq.mancoosi.simulator/.classpath
@@ -11,16 +11,12 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.drivers.emf4atl_2.0.2.v200812191010.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.engine.emfvm_2.0.2.v200812191010.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.engine.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.engine.vm_2.0.2.v200812191010.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.ocl.core_2.0.2.v200812191010.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.service.core_2.0.2.v200812191010.jar"/>
 	<classpathentry kind="src" path="/it.univaq.mancoosi.errormm"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/it.univaq.mancoosi.packagemm"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/it.univaq.mancoosi.positionmm"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/it.univaq.mancoosi.mancoosimm"/>
-	<classpathentry kind="lib" path="lib/WiresFixed_1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-compiler.jar"/>
-	<classpathentry kind="lib" path="lib/janino.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.core.jobs_3.4.1.R34x_v20081128.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.core.resources_3.4.2.R34x_v20090126.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.core.runtime_3.4.0.v20080512.jar"/>
@@ -31,5 +27,7 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.equinox.common_3.4.0.v20080421-2006.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.4.3.R34x_v20081215-1030.jar"/>
 	<classpathentry kind="lib" path="lib/commons-compress-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.m2m.atl.engine.vm_2.0.2.v200812191010.jar"/>
+	<classpathentry kind="lib" path="lib/WiresFixed_AtlRegolarVM_1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
