--- a/trunk/it.univaq.mancoosi.simulator/config/simulator_settings.properties
+++ b/trunk/it.univaq.mancoosi.simulator/config/simulator_settings.properties
@@ -8,21 +8,18 @@ directory_input_package_models = packageModels/
 directory_model_types = modelTypes/
 directory_transformation_repository = transformationRepository/
 directory_orchestration_models = orchestrationModels/
-directory_output_models = outputModel/
 directory_log = log/
 directory_tmp = temp/
 directory_backup = backup/
 
 # path + filename
-file_package_sequence = packageSequence.xml
+file_input_package_sequence = packageSequence.xml
 file_input_system_model = systemModel.mancoosimm
-
-# filename only
-file_error_model = errorSimulation.errormm
+file_output_error_model = outputModel/errorSimulation.errormm
+file_output_system_model = outputModel/systemModelPostSimul.mancoosimm
 
 file_extension_package_model = packagemm
 
-injector_package_name = pkginj.jar
-injector_package_directory = /home/max/workspace_svn/bundles/mancoosi-injector/pkginject/
+package_injector = /home/max/workspace_svn/it.univaq.mancoosi.injectors.packages/pkginj.jar
 
 delete_files_older_thanNdays = 30
