--- a/trunk/it.univaq.mancoosi.injectors.packages/config/pkginj_settings-debian.properties
+++ b/trunk/it.univaq.mancoosi.injectors.packages/config/pkginj_settings-debian.properties
@@ -13,7 +13,7 @@ maintainerScriptsLocation=/var/lib/dpkg/info/
 packagesLocation=/var/cache/apt/archives/
 
 # Target directory
-resultLocation=out/
+resultLocation=../it.univaq.mancoosi.simulator/packageModels/
 
 # Temp directory
 tempLocation=tmp/
