--- a/it.univaq.mancoosi.injectors.packages/config/pkginj_settings.properties
+++ b/it.univaq.mancoosi.injectors.packages/config/pkginj_settings.properties
@@ -9,3 +9,12 @@ skipFilesWithError=true
 
 # Replace existing models.
 overwriteModels=false
+
+# Statistics
+statsFile = stats.txt
+correctPackageWithScriptFile = correctPackageWithScriptFile.txt
+correctPackageNoScriptFile = correctPackageNoScriptFile.txt
+errorPackageWithScriptFile = errorPackageWithScriptFile.txt
+errorPackageNoScriptFile = errorPackageNoScriptFile.txt
+
+
