--- a/trunk/it.univaq.mancoosi.validator/config/validator_settings.properties
+++ b/trunk/it.univaq.mancoosi.validator/config/validator_settings.properties
@@ -1,2 +1,2 @@
-sysinjJarPath = /home/max/workspace_svn/it.univaq.mancoosi.injectors.systemconfiguration/sysinj.jar
-simulatorJarPath = /home/max/workspace_svn/it.univaq.mancoosi.simulator/simulator.jar
+sysinjJarPath = ../it.univaq.mancoosi.injectors.systemconfiguration/sysinj.jar
+simulatorJarPath = ../it.univaq.mancoosi.simulator/simulator.jar
