integration to commit r81...

--- a/it.univaq.mancoosi.simulator/config/simulator_settings.properties
+++ b/it.univaq.mancoosi.simulator/config/simulator_settings.properties
@@ -20,6 +20,6 @@ file_output_system_model = outputModel/systemModelPostSimul.mancoosimm
 
 file_extension_package_model = packagemm
 
-package_injector = /home/max/workspace_svn/it.univaq.mancoosi.injectors.packages/pkginj.jar
+package_injector = ../it.univaq.mancoosi.injectors.packages/pkginj.jar
 
 delete_files_older_thanNdays = 30
